@@ -4,6 +4,7 @@ MinMaxModifier::set_use_stock_quantities(true); //make use of the stock quantity
 
 DataObject::add_extension('Product', 'ProductStockDecorator');
 DataObject::add_extension('ProductVariation', 'ProductVariationStockDecorator');
+DataObject::add_extension('Order','OrderStockDecorator');
 
 Order::set_modifiers(array(
 	'MinMaxModifier'
