@@ -6,6 +6,9 @@ TODO:
  * Low /out of stock email notificaion - allow setting frequency of email.
  * Side report for products with low stock
  * Prevent adding more than # in stock to cart ... or give warning message that more will need to be ordered.
+ 
+ * Allow more control over choosing when stock levels are updated.
+ * Allow choosing if 
 
 
 0.2alpha
